update zig to latest master
commit 69aa09948b2463076ef22a550cb5d2483730ecaf

--- a/zig/CMakeLists.txt
+++ b/zig/CMakeLists.txt
@@ -62,6 +62,9 @@ option(ZIG_TEST_COVERAGE "Build Zig with test coverage instrumentation" OFF)
 # LLD to the tree. This option does nothing.
 option(ZIG_FORCE_EXTERNAL_LLD "does nothing" OFF)
 
+set(ZIG_TARGET_TRIPLE "native" CACHE STRING "arch-os-abi to output binaries for")
+set(ZIG_EXECUTABLE "" CACHE STRING "(when cross compiling) path to already-built zig binary")
+
 find_package(llvm)
 find_package(clang)
 find_package(lld)
@@ -338,7 +341,7 @@ if(MSVC)
     if(NOT "${CMAKE_BUILD_TYPE}" STREQUAL "Release" AND NOT "${CMAKE_BUILD_TYPE}" STREQUAL "MinSizeRel")
         set(EXE_LDFLAGS "${EXE_LDFLAGS} /debug:fastlink")
     endif()
-elseif(MINGW) 
+elseif(MINGW)
     set(EXE_LDFLAGS "${EXE_LDFLAGS} -Wl,--stack,16777216")
 endif()
 
@@ -353,7 +356,7 @@ if(ZIG_STATIC)
 else()
     if(MINGW)
         set(EXE_LDFLAGS "${EXE_LDFLAGS} -lz3")
-    endif() 
+    endif()
 endif()
 
 if(ZIG_TEST_COVERAGE)
@@ -424,6 +427,7 @@ endif()
 
 set(BUILD_LIBSTAGE2_ARGS "build-lib"
     "src-self-hosted/stage2.zig"
+    -target "${ZIG_TARGET_TRIPLE}"
     -mcpu=baseline
     --name zigstage2
     --override-lib-dir "${CMAKE_SOURCE_DIR}/lib"
@@ -436,12 +440,22 @@ set(BUILD_LIBSTAGE2_ARGS "build-lib"
     ${LIBSTAGE2_WINDOWS_ARGS}
 )
 
-add_custom_target(zig_build_libstage2 ALL
-    COMMAND zig0 ${BUILD_LIBSTAGE2_ARGS}
-    DEPENDS zig0
-    BYPRODUCTS "${LIBSTAGE2}"
-    WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}"
-)
+if("${ZIG_TARGET_TRIPLE}" STREQUAL "native")
+  add_custom_target(zig_build_libstage2 ALL
+      COMMAND zig0 ${BUILD_LIBSTAGE2_ARGS}
+      DEPENDS zig0
+      BYPRODUCTS "${LIBSTAGE2}"
+      WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}"
+  )
+  set(ZIG_EXECUTABLE "${zig_BINARY_DIR}/zig")
+else()
+  add_custom_target(zig_build_libstage2 ALL
+      COMMAND "${ZIG_EXECUTABLE}" ${BUILD_LIBSTAGE2_ARGS}
+      BYPRODUCTS "${LIBSTAGE2}"
+      WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}"
+  )
+endif()
+
 add_executable(zig "${ZIG_MAIN_SRC}")
 
 set_target_properties(zig PROPERTIES
@@ -451,7 +465,7 @@ set_target_properties(zig PROPERTIES
 target_link_libraries(zig zigcompiler "${LIBSTAGE2}")
 if(MSVC)
   target_link_libraries(zig ntdll.lib)
-elseif(MINGW) 
+elseif(MINGW)
   target_link_libraries(zig ntdll)
 endif()
 add_dependencies(zig zig_build_libstage2)
@@ -480,7 +494,7 @@ if(MSVC)
     endif()
 else()
     get_target_property(zig_BINARY_DIR zig BINARY_DIR)
-    install(CODE "set(zig_EXE \"${zig_BINARY_DIR}/zig\")")
+    install(CODE "set(zig_EXE \"${ZIG_EXECUTABLE}\")")
     install(CODE "set(ZIG_INSTALL_ARGS \"${ZIG_INSTALL_ARGS}\")")
     install(CODE "set(CMAKE_SOURCE_DIR \"${CMAKE_SOURCE_DIR}\")")
     install(SCRIPT ${CMAKE_CURRENT_SOURCE_DIR}/cmake/install.cmake)
