--- a/build
+++ b/build
@@ -15,7 +15,7 @@ cmake "$ROOTDIR/llvm" \
   -DLLVM_EXPERIMENTAL_TARGETS_TO_BUILD="AVR" \
   -DLLVM_ENABLE_LIBXML2=OFF \
   -DCMAKE_INSTALL_PREFIX="$ROOTDIR/out/host" \
-  -DCMAKE_PREFIX_PATH="$ROODIR/out/host" \
+  -DCMAKE_PREFIX_PATH="$ROOTDIR/out/host" \
   -DLLVM_BUILD_TOOLS=OFF \
   -DLLVM_INCLUDE_TESTS=OFF \
   -DLLVM_INCLUDE_EXAMPLES=OFF \
