Disable more options

--- a/build
+++ b/build
@@ -18,8 +18,11 @@ cmake "$ROOTDIR/llvm" \
   -DCMAKE_PREFIX_PATH="$ROOTDIR/out/host" \
   -DLLVM_BUILD_TOOLS=OFF \
   -DLLVM_INCLUDE_TESTS=OFF \
+  -DLLVM_INCLUDE_GO_TESTS=OFF \
   -DLLVM_INCLUDE_EXAMPLES=OFF \
   -DLLVM_INCLUDE_BENCHMARKS=OFF \
+  -DLLVM_ENABLE_BINDINGS=OFF \
+  -DLLVM_ENABLE_OCAMLDOC=OFF \
   -DCLANG_BUILD_TOOLS=OFF \
   -DCMAKE_BUILD_TYPE=Release
 make "$JOBS" install
@@ -51,8 +54,11 @@ cmake "$ROOTDIR/llvm" \
   -DCLANG_TABLEGEN="$ROOTDIR/out/build-llvm-host/bin/clang-tblgen" \
   -DLLVM_BUILD_TOOLS=OFF \
   -DLLVM_INCLUDE_TESTS=OFF \
+  -DLLVM_INCLUDE_GO_TESTS=OFF \
   -DLLVM_INCLUDE_EXAMPLES=OFF \
   -DLLVM_INCLUDE_BENCHMARKS=OFF \
+  -DLLVM_ENABLE_BINDINGS=OFF \
+  -DLLVM_ENABLE_OCAMLDOC=OFF \
   -DCLANG_BUILD_TOOLS=OFF \
   -DLLVM_BUILD_STATIC=ON \
   -DLIBCLANG_BUILD_STATIC=ON \
