update zig to master branch

--- a/zig/CMakeLists.txt
+++ b/zig/CMakeLists.txt
@@ -224,7 +224,7 @@ set(EMBEDDED_SOFTFLOAT_SOURCES
 add_library(embedded_softfloat STATIC ${EMBEDDED_SOFTFLOAT_SOURCES})
 if(MSVC)
     set_target_properties(embedded_softfloat PROPERTIES
-        COMPILE_FLAGS "-std=c99 /w"
+        COMPILE_FLAGS "/w /O2"
     )
 else()
     set_target_properties(embedded_softfloat PROPERTIES
@@ -315,7 +315,12 @@ include_directories(
 )
 
 # These have to go before the -Wno- flags
-set(EXE_CFLAGS "-std=c++14")
+if(MSVC)
+  set(EXE_CFLAGS "/std:c++14")
+else(MSVC)
+  set(EXE_CFLAGS "-std=c++14")
+endif(MSVC)
+
 if("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
     if(MSVC)
         set(EXE_CFLAGS "${EXE_CFLAGS} /w")
@@ -333,7 +338,11 @@ else()
     endif()
 endif()
 
-set(OPTIMIZED_C_FLAGS "-std=c99 -O3")
+if(MSVC)
+  set(OPTIMIZED_C_FLAGS "/O2")
+else(MSVC)
+  set(OPTIMIZED_C_FLAGS "-std=c99 -O3")
+endif(MSVC)
 
 set(EXE_LDFLAGS " ")
 if(MSVC)
