update zig to latest master

--- a/zig/.gitattributes
+++ b/zig/.gitattributes
@@ -6,4 +6,5 @@ deps/* linguist-vendored
 lib/include/* linguist-vendored
 lib/libc/* linguist-vendored
 lib/libcxx/* linguist-vendored
+lib/libcxxabi/* linguist-vendored
 lib/libunwind/* linguist-vendored
