--- a/build
+++ b/build
@@ -3,10 +3,14 @@
 set -e
 
 JOBS="$1"
-TARGET="$2"
+TARGET="$2" # Example: riscv64-linux-gnu
 ZIG_CC_FLAGS="$3"
 
 ROOTDIR="$(pwd)"
+
+TARGET_OS_AND_ABI=${TARGET#*-} # Example: linux-gnu
+TARGET_OS_LOWER=${TARGET_OS_AND_ABI%-*} # Example: linux
+TARGET_OS_CMAKE=${TARGET_OS_LOWER^} # Example: Linux
 
 # First build the libraries for Zig to link against, as well as native `llvm-tblgen`.
 mkdir -p "$ROOTDIR/out/build-llvm-host"
@@ -50,6 +54,7 @@ cmake "$ROOTDIR/llvm" \
   -DCMAKE_PREFIX_PATH="$ROOTDIR/out/$TARGET" \
   -DCMAKE_BUILD_TYPE=Release \
   -DCMAKE_CROSSCOMPILING=True \
+  -DCMAKE_SYSTEM_NAME="$TARGET_OS_CMAKE" \
   -DLLVM_TABLEGEN="$ROOTDIR/out/host/bin/llvm-tblgen" \
   -DCLANG_TABLEGEN="$ROOTDIR/out/build-llvm-host/bin/clang-tblgen" \
   -DLLVM_BUILD_TOOLS=OFF \
@@ -73,6 +78,7 @@ cmake "$ROOTDIR/zig" \
   -DCMAKE_INSTALL_PREFIX="$ROOTDIR/out/zig-$TARGET" \
   -DCMAKE_PREFIX_PATH="$ROOTDIR/out/$TARGET" \
   -DCMAKE_CROSSCOMPILING=True \
+  -DCMAKE_SYSTEM_NAME="$TARGET_OS_CMAKE" \
   -DCMAKE_BUILD_TYPE=Release \
   -DZIG_TARGET_TRIPLE="$TARGET" \
   -DZIG_EXECUTABLE="$ZIG"
