--- a/zig/.gitattributes
+++ b/zig/.gitattributes
@@ -1,6 +1,7 @@
 *.zig text eol=lf
 *.txt text eol=lf
 langref.html.in text eol=lf
+deps/SoftFloat-3e/*.txt text eol=crlf
 
 deps/* linguist-vendored
 lib/include/* linguist-vendored
