disable another unnecessary LLVM component
-DCLANG_ENABLE_ARCMT=OFF

--- a/build
+++ b/build
@@ -68,6 +68,7 @@ cmake "$ROOTDIR/llvm" \
   -DLLVM_ENABLE_BINDINGS=OFF \
   -DLLVM_ENABLE_OCAMLDOC=OFF \
   -DCLANG_BUILD_TOOLS=OFF \
+  -DCLANG_ENABLE_ARCMT=OFF \
   -DLLVM_BUILD_STATIC=ON \
   -DLIBCLANG_BUILD_STATIC=ON \
   -DLLVM_DEFAULT_TARGET_TRIPLE="$TARGET"
