--- a/build
+++ b/build
@@ -27,6 +27,7 @@ cmake "$ROOTDIR/llvm" \
   -DLLVM_INCLUDE_BENCHMARKS=OFF \
   -DLLVM_ENABLE_BINDINGS=OFF \
   -DLLVM_ENABLE_OCAMLDOC=OFF \
+  -DLLVM_ENABLE_Z3_SOLVER=OFF \
   -DCLANG_BUILD_TOOLS=OFF \
   -DCMAKE_BUILD_TYPE=Release
 make "$JOBS" install
@@ -67,6 +68,7 @@ cmake "$ROOTDIR/llvm" \
   -DLLVM_INCLUDE_BENCHMARKS=OFF \
   -DLLVM_ENABLE_BINDINGS=OFF \
   -DLLVM_ENABLE_OCAMLDOC=OFF \
+  -DLLVM_ENABLE_Z3_SOLVER=OFF \
   -DCLANG_BUILD_TOOLS=OFF \
   -DCLANG_ENABLE_ARCMT=OFF \
   -DLLVM_BUILD_STATIC=ON \
