--- a/build
+++ b/build
@@ -70,7 +70,7 @@ cmake "$ROOTDIR/llvm" \
   -DLLVM_ENABLE_OCAMLDOC=OFF \
   -DLLVM_ENABLE_Z3_SOLVER=OFF \
   -DCLANG_BUILD_TOOLS=OFF \
-  -DCLANG_ENABLE_ARCMT=OFF \
+  -DCLANG_ENABLE_ARCMT=ON \
   -DLLVM_BUILD_STATIC=ON \
   -DLIBCLANG_BUILD_STATIC=ON \
   -DLLVM_DEFAULT_TARGET_TRIPLE="$TARGET"
