--- a/build
+++ b/build
@@ -9,10 +9,13 @@ MCPU="$3" # Examples: `baseline`, `native`, `generic+v7a`, or `arm1176jzf_s`
 ROOTDIR="$(pwd)"
 
 TARGET_OS_AND_ABI=${TARGET#*-} # Example: linux-gnu
-TARGET_OS_LOWER=${TARGET_OS_AND_ABI%-*} # Example: linux
-TARGET_OS_LOWER="${TARGET_OS_LOWER/macos/darwin}" # cmake expects Darwin rather than macos
-TARGET_OS_LOWER="${TARGET_OS_LOWER/freebsd/freeBSD}" # cmake expects FreeBSD rather than freebsd
-TARGET_OS_CMAKE=$(echo "$TARGET_OS_LOWER" | cut -c1 | tr a-z A-Z)$(echo "$TARGET_OS_LOWER" | cut -c2-) # Example: Linux
+
+# Here we map the OS from the target triple to the value that CMake expects.
+TARGET_OS_CMAKE=${TARGET_OS_AND_ABI%-*} # Example: linux
+TARGET_OS_CMAKE="${TARGET_OS_CMAKE/macos/Darwin}"
+TARGET_OS_CMAKE="${TARGET_OS_CMAKE/freebsd/FreeBSD}"
+TARGET_OS_CMAKE="${TARGET_OS_CMAKE/windows/Windows}"
+TARGET_OS_CMAKE="${TARGET_OS_CMAKE/linux/Linux}"
 
 # First build the libraries for Zig to link against, as well as native `llvm-tblgen`.
 mkdir -p "$ROOTDIR/out/build-llvm-host"
