--- a/build
+++ b/build
@@ -13,10 +13,12 @@ TARGET_OS_AND_ABI=${TARGET#*-} # Example: linux-gnu
 
 # Here we map the OS from the target triple to the value that CMake expects.
 TARGET_OS_CMAKE=${TARGET_OS_AND_ABI%-*} # Example: linux
-TARGET_OS_CMAKE="${TARGET_OS_CMAKE/macos/Darwin}"
-TARGET_OS_CMAKE="${TARGET_OS_CMAKE/freebsd/FreeBSD}"
-TARGET_OS_CMAKE="${TARGET_OS_CMAKE/windows/Windows}"
-TARGET_OS_CMAKE="${TARGET_OS_CMAKE/linux/Linux}"
+case $TARGET_OS_CMAKE in
+  macos) TARGET_OS_CMAKE="Darwin";;
+  freebsd) TARGET_OS_CMAKE="FreeBSD";;
+  windows) TARGET_OS_CMAKE="Windows";;
+  linux) TARGET_OS_CMAKE="Linux";;
+esac
 
 # First build the libraries for Zig to link against, as well as native `llvm-tblgen`.
 mkdir -p "$ROOTDIR/out/build-llvm-host"
