build: set -DZIG_USE_LLVM_CONFIG=OFF
This avoids calling llvm-config when building natively. This was
problematic because we want to use the libs from zig-bootstrap, not
system libs, even when compiling natively.

Closes #50
Closes #51

--- a/build
+++ b/build
@@ -111,7 +111,8 @@ cmake "$ROOTDIR/zig" \
   -DZIG_TARGET_TRIPLE="$TARGET" \
   -DZIG_TARGET_MCPU="$MCPU" \
   -DZIG_EXECUTABLE="$ZIG" \
-  -DZIG_VERSION="$ZIG_VERSION"
+  -DZIG_VERSION="$ZIG_VERSION" \
+  -DZIG_USE_LLVM_CONFIG=OFF
 unset CC
 unset CXX
 make "$JOBS" install
