build: -DLLVM_ENABLE_PLUGINS=OFF

--- a/build
+++ b/build
@@ -65,6 +65,7 @@ cmake "$ROOTDIR/llvm" \
   -DLLVM_ENABLE_TERMINFO=OFF \
   -DLLVM_ENABLE_ZLIB=OFF \
   -DLLVM_ENABLE_BACKTRACES=OFF \
+  -DLLVM_ENABLE_PLUGINS=OFF \
   -DCMAKE_INSTALL_PREFIX="$ROOTDIR/out/$TARGET-$MCPU" \
   -DCMAKE_PREFIX_PATH="$ROOTDIR/out/$TARGET-$MCPU" \
   -DCMAKE_BUILD_TYPE=Release \
