Fix .gitattributes rules that should be recursive
These are currently incorrect according to the gitattributes(5) and
gitignore(5) man pages. However, it seems github ended up treating them
as we intended due to a bug until recently when that bug was fixed.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-llvm/* linguist-vendored
-lld/* linguist-vendored
-clang/* linguist-vendored
-zig/* linguist-vendored
+llvm/** linguist-vendored
+lld/** linguist-vendored
+clang/** linguist-vendored
+zig/** linguist-vendored
