--- a/build
+++ b/build
@@ -56,6 +56,17 @@ ZIG="$ROOTDIR/out/host/bin/zig"
 export CC="$ZIG cc -fno-sanitize=all -target $TARGET -mcpu=$MCPU"
 export CXX="$ZIG c++ -fno-sanitize=all -target $TARGET -mcpu=$MCPU"
 
+# First cross compile zlib for the target, as we need the LLVM linked into
+# the finaly zig binary to have zlib support enabled.
+cd "$ROOTDIR/zlib"
+export AR="$ROOTDIR/out/host/bin/llvm-ar"
+export RANLIB="$ROOTDIR/out/host/bin/llvm-ranlib"
+./configure --static --prefix="$ROOTDIR/out/$TARGET-$MCPU"
+unset AR
+unset RANLIB
+make "$JOBS" install
+make distclean
+
 # Rebuild LLVM with Zig.
 mkdir -p "$ROOTDIR/out/build-llvm-$TARGET-$MCPU"
 cd "$ROOTDIR/out/build-llvm-$TARGET-$MCPU"
@@ -63,7 +74,7 @@ cmake "$ROOTDIR/llvm" \
   -DLLVM_ENABLE_PROJECTS="lld;clang" \
   -DLLVM_ENABLE_LIBXML2=OFF \
   -DLLVM_ENABLE_TERMINFO=OFF \
-  -DLLVM_ENABLE_ZLIB=OFF \
+  -DLLVM_ENABLE_ZLIB=FORCE_ON \
   -DLLVM_ENABLE_BACKTRACES=OFF \
   -DLLVM_ENABLE_PLUGINS=OFF \
   -DCMAKE_INSTALL_PREFIX="$ROOTDIR/out/$TARGET-$MCPU" \
