--- a/lld/CMakeLists.txt
+++ b/lld/CMakeLists.txt
@@ -185,6 +185,7 @@ endif()
 include_directories(BEFORE
   ${CMAKE_CURRENT_BINARY_DIR}/include
   ${CMAKE_CURRENT_SOURCE_DIR}/include
+  ${CMAKE_CURRENT_SOURCE_DIR}/../zig/lib/libunwind/include
   )
 
 add_subdirectory(Common)
