update zig sources to 0.8.1

--- a/zig/doc/langref.html.in
+++ b/zig/doc/langref.html.in
@@ -258,7 +258,7 @@ pub fn main() !void {
       <p>
         The code sample begins by adding Zig's Standard Library to the build using the {#link|@import#} builtin function.
         The {#syntax#}@import("std"){#endsyntax#} function call creates a structure to represent the Standard Library.
-        The code then {#link|declares|Container level Variables#} a
+        The code then declares a
         {#link|constant identifier|Assignment#}, named <code>std</code>, for easy access to
         <a href="https://github.com/ziglang/zig/wiki/FAQ#where-is-the-documentation-for-the-zig-standard-library">Zig's standard library</a>.
       </p>
@@ -927,8 +927,8 @@ fn foo() i32 {
   const expect = std.testing.expect;
   
   test "static local variable" {
-      expect(foo() == 1235);
-      expect(foo() == 1236);
+      try expect(foo() == 1235);
+      try expect(foo() == 1236);
   }
   
   fn foo() i32 {
