build script: disable llvm and clang docs
so that those files can be omitted from the tarball.

--- a/build
+++ b/build
@@ -37,6 +37,8 @@ cmake "$ROOTDIR/llvm" \
   -DLLVM_ENABLE_OCAMLDOC=OFF \
   -DLLVM_ENABLE_Z3_SOLVER=OFF \
   -DCLANG_BUILD_TOOLS=OFF \
+  -DCLANG_INCLUDE_DOCS=OFF \
+  -DLLVM_INCLUDE_DOCS=OFF \
   -DCMAKE_BUILD_TYPE=Release
 make "$JOBS" install
 
@@ -99,6 +101,8 @@ cmake "$ROOTDIR/llvm" \
   -DLLVM_ENABLE_OCAMLDOC=OFF \
   -DLLVM_ENABLE_Z3_SOLVER=OFF \
   -DCLANG_BUILD_TOOLS=OFF \
+  -DCLANG_INCLUDE_DOCS=OFF \
+  -DLLVM_INCLUDE_DOCS=OFF \
   -DCLANG_ENABLE_ARCMT=ON \
   -DLLVM_BUILD_STATIC=ON \
   -DLIBCLANG_BUILD_STATIC=ON \
