--- a/zig/doc/langref.html.in
+++ b/zig/doc/langref.html.in
@@ -316,6 +316,7 @@
           <a href="https://ziglang.org/documentation/0.6.0/">0.6.0</a> |
           <a href="https://ziglang.org/documentation/0.7.1/">0.7.1</a> |
           <a href="https://ziglang.org/documentation/0.8.1/">0.8.1</a> |
+          <a href="https://ziglang.org/documentation/0.9.0/">0.9.0</a> |
           master
         </nav>
         <nav aria-labelledby="table-of-contents">
