update LLVM sources to 13.0.1

--- a/lld/CMakeLists.txt
+++ b/lld/CMakeLists.txt
@@ -184,7 +184,6 @@ endif()
 include_directories(BEFORE
   ${CMAKE_CURRENT_BINARY_DIR}/include
   ${CMAKE_CURRENT_SOURCE_DIR}/include
-  ${CMAKE_CURRENT_SOURCE_DIR}/../zig/lib/libunwind/include
   )
 
 if (NOT LLVM_INSTALL_TOOLCHAIN_ONLY)
@@ -204,6 +203,7 @@ if (LLVM_INCLUDE_TESTS)
   add_subdirectory(unittests)
 endif()
 
+add_subdirectory(docs)
 add_subdirectory(COFF)
 add_subdirectory(ELF)
 add_subdirectory(MachO)
