--- a/build
+++ b/build
@@ -7,7 +7,7 @@ TARGET="$2" # Example: riscv64-linux-gnu
 MCPU="$3" # Examples: `baseline`, `native`, `generic+v7a`, or `arm1176jzf_s`
 
 ROOTDIR="$(pwd)"
-ZIG_VERSION="0.9.1-dev.90+d2398cf00"
+ZIG_VERSION="0.9.1"
 
 TARGET_OS_AND_ABI=${TARGET#*-} # Example: linux-gnu
 
