--- a/build
+++ b/build
@@ -124,6 +124,7 @@ $ZIG build \
   -Dstatic-llvm \
   -Drelease \
   -Dstrip \
+  -fno-stage1 \
   -Dtarget="$TARGET" \
   -Dcpu="$MCPU" \
   -Dversion-string="$ZIG_VERSION"
