zig build: ZIG_STATIC_ZLIB
Refs https://github.com/ziglang/zig/issues/12069

Also, set `-u`, because it's annoying to run the build script, have
lunch, and return to realize that I forgot to pass the 3 non-optional
arguments.

--- a/build
+++ b/build
@@ -1,6 +1,6 @@
 #!/bin/sh
 
-set -e
+set -eu
 
 JOBS="$1"
 TARGET="$2" # Example: riscv64-linux-gnu
@@ -50,7 +50,8 @@ cmake "$ROOTDIR/zig" \
   -DCMAKE_INSTALL_PREFIX="$ROOTDIR/out/host" \
   -DCMAKE_PREFIX_PATH="$ROOTDIR/out/host" \
   -DCMAKE_BUILD_TYPE=Release \
-  -DZIG_VERSION="$ZIG_VERSION"
+  -DZIG_VERSION="$ZIG_VERSION" \
+  -DZIG_STATIC_ZLIB=ON
 make "$JOBS" install
 
 # Now we have Zig as a cross compiler.
