--- a/build
+++ b/build
@@ -7,7 +7,7 @@ TARGET="$2" # Example: riscv64-linux-gnu
 MCPU="$3" # Examples: `baseline`, `native`, `generic+v7a`, or `arm1176jzf_s`
 
 ROOTDIR="$(pwd)"
-ZIG_VERSION="0.10.0-dev.3530+d2ecb0d7c"
+ZIG_VERSION="0.10.0-dev.3524+74673b7f6"
 
 TARGET_OS_AND_ABI=${TARGET#*-} # Example: linux-gnu
 
@@ -118,14 +118,22 @@ cd "$ROOTDIR/out/build-llvm-$TARGET-$MCPU"
 make "$JOBS" install-llvm-headers install-clang-headers install-LLVMSupport install-LLVMDemangle
 
 # Finally, we can cross compile Zig itself, with Zig.
-cd "$ROOTDIR/zig"
-$ZIG build \
-  --prefix "$ROOTDIR/out/zig-$TARGET-$MCPU" \
-  --search-prefix "$ROOTDIR/out/$TARGET-$MCPU" \
-  -Dstatic-llvm \
-  -Drelease \
-  -Dstrip \
-  -Dtarget="$TARGET" \
-  -Dcpu="$MCPU" \
-  -Dversion-string="$ZIG_VERSION" \
-  -Denable-stage1
+mkdir -p "$ROOTDIR/out/build-zig-$TARGET-$MCPU"
+cd "$ROOTDIR/out/build-zig-$TARGET-$MCPU"
+cmake "$ROOTDIR/zig" \
+  -DCMAKE_INSTALL_PREFIX="$ROOTDIR/out/zig-$TARGET-$MCPU" \
+  -DCMAKE_PREFIX_PATH="$ROOTDIR/out/$TARGET-$MCPU" \
+  -DCMAKE_CROSSCOMPILING=True \
+  -DCMAKE_SYSTEM_NAME="$TARGET_OS_CMAKE" \
+  -DCMAKE_AR="$ROOTDIR/out/host/bin/llvm-ar" \
+  -DCMAKE_RANLIB="$ROOTDIR/out/host/bin/llvm-ranlib" \
+  -DCMAKE_BUILD_TYPE=Release \
+  -DZIG_TARGET_TRIPLE="$TARGET" \
+  -DZIG_TARGET_MCPU="$MCPU" \
+  -DZIG_EXECUTABLE="$ZIG" \
+  -DZIG_VERSION="$ZIG_VERSION" \
+  -DZIG_USE_LLVM_CONFIG=OFF \
+  -DZIG_STATIC_ZLIB=ON
+unset CC
+unset CXX
+make "$JOBS" install
