build: disable ZSTD until https://reviews.llvm.org/D128465 is resolved

--- a/build
+++ b/build
@@ -84,6 +84,7 @@ cmake "$ROOTDIR/llvm" \
   -DLLVM_ENABLE_ZLIB=FORCE_ON \
   -DLLVM_ENABLE_BACKTRACES=OFF \
   -DLLVM_ENABLE_PLUGINS=OFF \
+  -DLLVM_ENABLE_ZSTD=OFF \
   -DCMAKE_INSTALL_PREFIX="$ROOTDIR/out/$TARGET-$MCPU" \
   -DCMAKE_PREFIX_PATH="$ROOTDIR/out/$TARGET-$MCPU" \
   -DCMAKE_BUILD_TYPE=Release \
